# rlm-adk

./: .gitignore  AGENTS.md  CLAUDE.md  _demo_phase2_limit.py  _demo_phase2_sync.py  _demo_phase2_trace.py  _demo_phase3_factory.py  _demo_phase4_guards.py  _demo_phase4_wiring.py  demo.md  demo_bug13_fix.md  demo_e2e_traces_artifacts.md  demo_fix_dispatch.md  demo_fix_repl_tool.md  demo_fix_worker.md  demo_fmea_obs_tests.md  demo_fmea_team_b.md  demo_fmea_team_c.md  demo_fmea_team_f.md  demo_fmea_team_g.md  demo_fmea_team_i.md  demo_fmea_team_k.md  demo_fmea_team_l.md  demo_lineage_completion_planes.md  demo_path_resolution.md  fmea_gaps.md  fmea_gaps_compiled.json  key_surgeon_demo.md  obs_consolidator_demo.md  package-lock.json  package.json  projects.txt  pyproject.toml  pyrightconfig.json  repl_capture_lineage.json  repomix-architecture-flow-compressed.xml  repomix-output.md  repomix-rlm_adk-compressed.xml  repomix-rlm_adk_test-compressed.xml  review_team_a.json  (+10 more)
.claude/: settings.json
.gemini/: settings.json
ai_docs/: DAG_state_of_art.md  NiceGUI_agent_dashboard_ideas.md  Polya_workflow_in_REPL.md  adk_api_reference.md  adk_cache.md  adk_callbacks.md  adk_callbacks_summary.md  adk_file_artifact_service_docs.md  adk_include_contents.md  adk_input_output_schema.md  adk_instruction_parameter.md  adk_mobile_remote.md  adk_planner.md  adk_runtime_event_loop.md  adk_session_state.md  adk_skills.md  adk_sqlite_session_service_docs.md  adk_tools_controlling_flow.md  adk_v1.27_updates.md  artifact_service_implementation.md  chatGPT_bug13_assessment.md  chatGPT_memory.txt  chatGPT_obsidian_recomendations.md  claude_code_agent_teams_setup.md  claude_code_chron.md  claude_code_hooks_docs.md  codex_cli_docs.md  database_spec.md  database_strategy_report.md  discovering_multiagent_aglos_2602.16928v2.md  discovering_multiagent_algos_claude_convert.md  facebook_ai_agent_advertising_research.md  fileservice_spec.md  gcloud_token_validation.md  gcloud_workspace_api.md  notebooklm_skill_enhancement_proposal.md  obsidian_research_vault.md  optik_observability.md  polya_for_coding.md  repomix-python.md  (+5 more)
callsite_hover/: a2a_agent_executor_google-adk_callsite_hover.json  agent_google-adk_callsite_hover.json  agent_google-genai_callsite_hover.json  artifacts_google-adk_callsite_hover.json  cache_google-adk_callsite_hover.json  catalog_google-adk_callsite_hover.json  context_snapshot_google-adk_callsite_hover.json  contract_runner_google-adk_callsite_hover.json  custom_metadata_callback_google-adk_callsite_hover.json  dashboard_auto_launch_google-adk_callsite_hover.json  dashboard_events_google-adk_callsite_hover.json  debug_logging_google-adk_callsite_hover.json  dispatch_google-adk_callsite_hover.json  dispatch_google-genai_callsite_hover.json  event_actions_google-genai_callsite_hover.json  experimental_google-adk_callsite_hover.json  google_cloud_analytics_google-adk_callsite_hover.json  google_cloud_tracing_google-adk_callsite_hover.json  google_llm_google-genai_callsite_hover.json  instrumented_runner_google-adk_callsite_hover.json  langfuse_tracing_google-adk_callsite_hover.json  lineage_assertion_plugin_google-adk_callsite_hover.json  (+64 more)
rlm_adk/: agent.py  (+8 more)
(+1288 files in other folders)
